Automatically applied checkstyle